[tool.poetry]
name = "data_wrangling_components"
version = "0.0.4"
description = "This project provides a collection of utilities for doing lightweight data wrangling."
authors = [
    "Nathan Evans <naevans@microsoft.com>",
    "Andres Morales <andresmor@microsoft.com>"
]
license = "MIT"
readme = "README.md"
include = ["../../schema/workflow.json"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pandas = "^1.4.1"
jsonschema = "^4.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "^21.12b0"
mypy = "^0.931"
pytest-cov = "^3.0.0"
ipykernel = "^6.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
py_version = 36
profile = "black"
force_single_line = false
combine_as_imports = true
lines_between_types = 1
lines_after_imports = 2
src_paths = ["data_wrangling_components", "tests"]
extend_skip = ["setup.py"]


[tool.black]
target-version = ['py36']
force-exclude = '''
.*/setup\.py$
'''


[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = "data_wrangling_components"

[tool.coverage.run]
omit = [
    "tests/*",
    ".*",
    "data/*"
    ]